--- a/terraform_aws_qxf2_SQS_config/inspec-profile/inspec.yml
+++ b/terraform_aws_qxf2_SQS_config/inspec-profile/inspec.yml
@@ -1,8 +1,8 @@
 name: inspec-profile
 title: AWS InSpec Profile
-maintainer: The Authors
-copyright: The Authors
-copyright_email: you@example.com
+maintainer: Qxf2
+copyright: Qxf2
+copyright_email: mak@qxf2.com
 license: Apache-2.0
 summary: An InSpec Compliance Profile For AWS
 version: 0.1.0
