--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,7 +13,7 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    environment: production
+    environment: development
     defaults:
       run:
         shell: bash
@@ -22,8 +22,8 @@ jobs:
     - name: Configure aws credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::12345678:role/github_action_readonly
-        aws-region: eu-west-1
+        role-to-assume: arn:aws:iam::120666943157:role/github_workflow_role
+        aws-region: us-east-1
 
     - name: Checkout
       uses: actions/checkout@v3
