--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Configure aws credentials
       uses: aws-actions/configure-aws-credentials@v3
       with:
-        role-to-assume: arn:aws:iam::120666943157:role/github_work_flow
+        role-to-assume: arn:aws:iam::120666943157:role/github_workflow_terraform
         aws-region: us-east-1
 
     - name: Checkout
