--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,13 +34,13 @@ jobs:
         terraform_version: 1.5.6
 
     - name: Terraform Init
-      run: terraform init
+      run: cd examples/terraform_aws_qxf2_carsapi_docker_image && terraform init
 
     - name: Terraform Format
-      run: terraform fmt -check
+      run: cd examples/terraform_aws_qxf2_carsapi_docker_image && terraform fmt -check
 
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: cd examples/terraform_aws_qxf2_carsapi_docker_image && terraform plan -input=false
 
       # On push to "main", deploy the Terraform infrastructure
     - name: Terraform Apply
