changes made to variable.tf and workflow file

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,4 +45,4 @@ jobs:
       # On push to "main", deploy the Terraform infrastructure
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      run: cd examples/terraform_aws_qxf2_carsapi_docker_image && terraform apply -auto-approve -input=false
