--- a/.github/workflows/s3_terraform.yml
+++ b/.github/workflows/s3_terraform.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
+    paths:
+      - 'examples/terraform_aws_qxf2_s3_bucket_rag/**'
 
 permissions:
   id-token: write
