changed the github workflow to trigger manually

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,11 +1,7 @@
 name: 'Terraform'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    paths:
-      - 'examples/terraform_aws_qxf2_carsapi_docker_image/**'
+  workflow_dispatch:
 
 permissions:
   id-token: write
