--- a/.github/workflows/s3_terraform.yml
+++ b/.github/workflows/s3_terraform.yml
@@ -1,11 +1,7 @@
 name: 's3 Terraform'
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    paths:
-      - 'examples/terraform_aws_qxf2_s3_bucket_rag/**'
+  workflow_dispatch:
 
 permissions:
   id-token: write
@@ -26,7 +22,7 @@ jobs:
       with:
         role-to-assume: arn:aws:iam::120666943157:role/github_workflow_terraform
         aws-region: us-east-1
-
+    
     - name: Checkout
       uses: actions/checkout@v3
 
@@ -34,8 +30,17 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.6
+    
+    - uses: dorny/paths-filter@v2
+      id: changes
+      with: 
+          filters: |
+            examples:
+              - 'terraform_aws_qxf2_s3_bucket_rag/**'
+    
 
     - name: Terraform Init
+      if: steps.changes.outputs.terraform_aws_qxf2_s3_bucket_rag=='true'
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform init
 
     - name: Terraform Format
