--- a/.github/workflows/s3_terraform.yml
+++ b/.github/workflows/s3_terraform.yml
@@ -43,8 +43,8 @@ jobs:
       if: steps.changes.outputs.terraform_aws_qxf2_s3_bucket_rag=='true'
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform init
 
-    - name: Terraform Format
-      run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform fmt -check
+    - name: Terraform Validate
+      run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform validate -no-color
 
     - name: Terraform Plan
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform plan -input=false
