terraform command changed back to push trigger workflow

--- a/.github/workflows/s3_terraform.yml
+++ b/.github/workflows/s3_terraform.yml
@@ -1,7 +1,9 @@
 name: 's3 Terraform'
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
 
 permissions:
   id-token: write
