--- a/.github/workflows/s3_terraform.yml
+++ b/.github/workflows/s3_terraform.yml
@@ -40,10 +40,11 @@ jobs:
           filters: |
             examples:
               - 'terraform_aws_qxf2_s3_bucket_rag/**'
-    
+            .github:
+              - 'workflows/**'
 
     - name: Terraform Init
-      if: steps.changes.outputs.terraform_aws_qxf2_s3_bucket_rag=='true'
+      if: steps.changes.outputs.terraform_aws_qxf2_s3_bucket_rag=='true' || steps.changes.outputs.workflows=='true'
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform init
 
     - name: Terraform Validate
