--- a/.github/workflows/training_website.yml
+++ b/.github/workflows/training_website.yml
@@ -1,10 +1,7 @@
 name: 'training website Terraform'
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-
+on: [push, pull_request]
+ 
 permissions:
   id-token: write
   contents: read
@@ -14,18 +11,15 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    env:
-      SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY_NAME }}
-      
+    environment: development
     defaults:
-      run:  
+      run:
         shell: bash
 
     steps:
-    - name: set the key
+    - name: setup the SSH key
       run: |  
-        echo ${{ secrets.SSH_PRIVATE_KEY }} | base64 --decode > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        echo ${{ secrets.PRIVATE_KEY_NAME }} | base64 --decode > ~/.ssh/terraform && chmod 600 ~/.ssh/terraform
 
     - name: Configure aws credentials
       uses: aws-actions/configure-aws-credentials@v3
@@ -47,7 +41,7 @@ jobs:
           filters: |
             src:
               - 'examples/terraform_aws_qxf2_training_website/**'
-              - '.github/workflows/**'
+              - '.github/workflows/training_website'
 
     - name: Terraform Init
       if: steps.changes.outputs.src=='true'
