--- a/.github/workflows/training_website.yml
+++ b/.github/workflows/training_website.yml
@@ -57,5 +57,5 @@ jobs:
 
       # On push to "main", deploy the Terraform infrastructure
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      if: github.event_name == 'push'
       run: cd examples/terraform_aws_qxf2_training_website && terraform apply -auto-approve -input=false
