--- a/.github/workflows/s3_terraform.yml
+++ b/.github/workflows/s3_terraform.yml
@@ -48,9 +48,11 @@ jobs:
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform init -upgrade
 
     - name: Terraform Validate
+      if: steps.changes.outputs.src=='true'
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform validate -no-color
 
     - name: Terraform Plan
+      if: steps.changes.outputs.src=='true'
       run: cd examples/terraform_aws_qxf2_s3_bucket_rag && terraform plan -input=false
 
       # On push to "main", deploy the Terraform infrastructure
