--- a/.github/workflows/training_website.yml
+++ b/.github/workflows/training_website.yml
@@ -53,9 +53,11 @@ jobs:
       run: cd examples/terraform_aws_qxf2_training_website && terraform init
 
     - name: Terraform Validate
+      if: steps.changes.outputs.src=='true'
       run: cd examples/terraform_aws_qxf2_training_website && terraform validate -no-color
 
     - name: Terraform Plan
+      if: steps.changes.outputs.src=='true'
       run: cd examples/terraform_aws_qxf2_training_website && terraform plan -input=false
 
       # On push to "main", deploy the Terraform infrastructure
