--- a/.github/workflows/Deploy_SQS.yml
+++ b/.github/workflows/Deploy_SQS.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
- 
+
 permissions:
   id-token: write
   contents: read
@@ -25,7 +25,7 @@ jobs:
       with:
         role-to-assume: arn:aws:iam::120666943157:role/github_workflow_terraform
         aws-region: us-east-1
-    
+
     - name: Checkout
       uses: actions/checkout@v3
 
@@ -33,27 +33,29 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.6
-    
+
+    - name: comingout from .github
+      run: cd ..
+
     - uses: dorny/paths-filter@v2
-      id: changesf
-      with: 
+      id: changes
+      with:
           filters: |
             src:
               - 'examples/terraform_aws_qxf2_SQS_config/**'
-              - '.github/workflows/Deploy_SQS'
   
     - name: Terraform Init
-      if:  steps.changes.outputs.src=='true'
-      run: cd examples/terraform_aws_qxf2_SQS_config && terraform init
-
+      if: steps.changes.outputs.src=='true'
+      run: cd examples/terraform_aws_qxf2_practice_aiml_app && terraform init
+    
     - name: Terraform Validate
-      if:  steps.changes.outputs.src=='true'
-      run: cd examples/terraform_aws_qxf2_SQS_config && terraform validate -no-color
-
+      if: steps.changes.outputs.src=='true'
+      run: cd examples/terraform_aws_qxf2_practice_aiml_app && terraform validate -no-color
     - name: Terraform Plan
-      run: cd examples/terraform_aws_qxf2_SQS_config && terraform plan -input=false
+      if: steps.changes.outputs.src=='true'
+      run: cd examples/terraform_aws_qxf2_practice_aiml_app && terraform plan -input=false
 
       # On push to "main", deploy the Terraform infrastructure
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: cd examples/terraform_aws_qxf2_SQS_config && terraform apply -auto-approve -input=false
+      run: cd examples/terraform_aws_qxf2_practice_aiml_app && terraform apply -auto-approve -input=false
